--- a/src/css/Car.module.css
+++ b/src/css/Car.module.css
@@ -1,4 +1,12 @@
-.car {
+.product{
+  box-sizing: border-box;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin: 15px 0;
+}
+.product .car {
   max-width: 227px;
   width: 100%;
   height: 340px;
@@ -17,7 +25,7 @@
   object-fit: cover;
 }
 
-.boxDetails{
+.car .boxDetails{
   max-width: 500px;
   width: 100%;
   margin: 20px;
@@ -62,4 +70,17 @@
   cursor: pointer;
   text-transform: uppercase;
   letter-spacing: 2px;
+}
+
+@media (max-width: 500px){
+  .boxDetails{
+    padding: 0;
+  }
+  .boxDetails img{
+    width: 40px;
+    height: 35px;
+  }
+  .details .img-container{
+    height: 350px;
+  }
 }
