--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,61 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+
+/* CartPage CSS */
+
+.cartPage-style {
+  display: grid;
+}
+
+.cart-rubrik {
+  margin: 10px auto 10px auto;
+  font-size: 3rem;
+}
+
+/* CartProduct CSS */
+
+.cart-container {
+  margin-top: 10vh;
+  display: grid;
+}
+
+
+.bild-price {
+  display: grid;
+  position: relative;
+}
+
+.bild {
+  background: grey;
+  width: 150px;
+  height: 150px;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.cart-price {
+  margin: 10px auto 10px auto;
+}
+
+.delete-button {
+  background-color: #555555; 
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-decoration: none;
+  font-size: 16px;
+  width: 7rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.product-make {
+  font-size: 2rem;
+}
+
+.product-info {
+  font-size: 1.3rem;
+}
