--- a/src/css/Car.module.css
+++ b/src/css/Car.module.css
@@ -10,6 +10,10 @@
   cursor: pointer;
 }
 
+.car:hover {
+  box-shadow: 0 0 21px rgba(33,33,33,.2); 
+}
+
 .car img{
   width: 100%;
   height: 100%;
@@ -25,10 +29,8 @@
   margin: 15px 0;
 }
 .boxDetails h2{
-  text-transform: uppercase;
   color: darkblue;
-  letter-spacing: 1px;
-  font-size: 1rem;
+  font-size: 1.05rem;
 }
 
 .boxDetails p{
@@ -44,7 +46,7 @@
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-  font-size: 0.5rem;
+  font-size: 0.7rem;
   }
   .car .boxDetails h4{
     color: crimson;
@@ -63,6 +65,11 @@
   cursor: pointer;
   text-transform: uppercase;
   letter-spacing: 2px;
+}
+
+.car .boxDetails button:hover{
+  background: #afafaf;
+  color: #333;
 }
 
 @media (max-width: 500px){
