Changes to make navbar responsive

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -43,3 +43,18 @@ margin-bottom:-10px;
 .nav-link a:hover {
     text-decoration: none;
 }
+.totalPrice {
+    margin-left: 1.5rem;
+}
+
+
+@media only screen and (min-width: 576px) 
+{
+   .dropdown  {
+        order:1;
+        }
+}
+
+.nav-link a {
+    
+}
