Css changes i CartProduct and CartPage

--- a/src/css/CartPage.module.css
+++ b/src/css/CartPage.module.css
@@ -6,6 +6,7 @@
 .cart-rubrik {
   margin: 10px auto 10px auto;
   font-size: 2rem;
+  font-family:Verdana, Geneva, Tahoma, sans-serif ;
 }
 
 .shipping-field {
