Adding About.js and putting it into router in App.js

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -58,3 +58,12 @@ margin-bottom:-10px;
 .nav-link p {
     margin: auto;
 }
+
+.About  {
+    color:#000;
+    background-color: #fff;
+    
+}
+.About h1{
+    font-weight: 600;
+    }
