--- a/src/css/filter.module.css
+++ b/src/css/filter.module.css
@@ -15,9 +15,13 @@
   display: none;
   position: absolute;
   background-color: white;
-  min-width: 160px;
+  min-width: 200px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
+}
+
+.priceFilter {
+  padding: 30px;
 }
 
 /* Change color of dropdown links on hover */
