Typo in import of searchgroup and aligning text-center in cart dropdown menu

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -28,8 +28,7 @@ margin-bottom:-10px;
 .dropdown-menu  {
     right: 0;
     left: auto;
-    padding-left: 1px;
-    padding-right: 1px;
+    text-align: center;
 }
 .dropdown-toggle::after {
     display: none;
@@ -40,9 +39,7 @@ margin-bottom:-10px;
 .nav-link a:hover {
     text-decoration: none;
 }
-.totalPrice {
-    margin-left: 1.5rem;
-}
+
 @media only screen and (min-width: 576px) 
 {
    .dropdown  {
