--- a/src/custom.scss
+++ b/src/custom.scss
@@ -6,6 +6,7 @@ $theme-colors: (
     "primary":#FF7F50,
     "secondary":#FF9269,
 );
+$first:#ffc8b4;
 
 @import "~bootstrap/scss/bootstrap";
 @use "sass:color";
@@ -49,13 +50,6 @@ margin-bottom:-10px;
 .nav-link p {
     margin: auto;
 }
-.About  {
-    color:#000;
-    background-color: #fff;
-}
-.About h1{
-    font-weight: 600;
-    }
 
 .fadeout {
     text-align:center;
@@ -81,3 +75,20 @@ margin-bottom:-10px;
         opacity: 0; 
       }
   }
+  .jumbotron {
+    background-color:$first; 
+
+}
+.About{
+    text-align: center;
+    h1{
+        font-weight: 600;
+        }
+        h2{
+            font-size:1.5rem;
+            font-weight: 600;
+            }
+        img{
+            padding:2rem;
+        }    
+}
