--- a/src/css/Car.module.css
+++ b/src/css/Car.module.css
@@ -56,8 +56,16 @@
   text-overflow: ellipsis;
   font-size: 0.7rem;
   }
-  .car .boxDetails h4{
+  /* .car .boxDetails h4{
     color: crimson;
+    font-size: 1rem;
+  } */
+  .car .boxDetails .isdiscount {
+    color: crimson;
+    font-size: 1rem;
+  }
+  .car .boxDetails .undiscount{
+    color:black;
     font-size: 1rem;
   }
 
