--- a/src/css/Car.module.css
+++ b/src/css/Car.module.css
@@ -1,12 +1,13 @@
 
  .car {
-  max-width: 227px;
+  display: flex;
+  flex-direction: column;
+  max-width: 431px;
   width: 100%;
-  height: 340px;
+  height: 550px;
   overflow: hidden;
   box-shadow: 0 0 5px #ccc;
-  padding: 15px;
-  margin: 15px;
+  margin: 60px;
   cursor: pointer;
   background: white;
 }
@@ -17,28 +18,37 @@
 
 .car img{
   width: 100%;
-  max-height: 132px;
+  height: 100%;
+  max-height: 300px;
   display: block;
   object-fit: cover;
 }
 
-.car img:hover{
+.cartBox img {
+  width:20px;
+  height:20px;   
+  padding:0;
+  margin:0;
+  fill: black;
+}
+/* .car img:hover{
   width: 100%;
   height: 100%;
   max-height: 162px;
   display: block;
   object-fit: cover;
-}
+} */
 
 .car .boxDetails{
   max-width: 500px;
   width: 100%;
   margin: 20px;
+  padding: 20px;
   margin: 30px 0 15px 0;
 }
 .boxDetails h2{
-  color: darkblue;
-  font-size: 1.05rem;
+  color:#030303;
+  font-size: 19px;
 }
 
 .boxDetails p{
@@ -50,7 +60,7 @@
   height: 50px;
 }
 .boxDetails h3{
-  
+  color:#030303;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -60,6 +70,14 @@
     color: crimson;
     font-size: 1rem;
   } */
+
+  .car .boxDetails h4{
+    display: flex;
+    justify-content: space-between;
+    color:#030303;
+    font-size: 1rem;
+  }
+
   .car .boxDetails .isdiscount {
     color: crimson;
     font-size: 1rem;
@@ -70,17 +88,8 @@
   }
 
 .car .boxDetails button{
-  width: 100%;
-  border: none;
-  outline: none;
-  background: #333;
-  color: white;
-  text-align: center;
-  padding: 10px 0;
-  margin: 10px 0;
   cursor: pointer;
-  text-transform: uppercase;
-  letter-spacing: 2px;
+  padding-right: 50px;
 }
 
 .car .boxDetails button:hover{
