--- a/src/css/Car.module.css
+++ b/src/css/Car.module.css
@@ -98,6 +98,31 @@
   color: #333;
 }
 
+.imageBox {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+span.purchasedBox {
+  background-color: #FE7F50;
+  color: white;
+  font-weight: 600;
+  text-align: center;
+  padding: 20px 40px;
+  position: absolute;
+  transform:translate(-25%);
+}
+
+span.notPurchased {
+  visibility: hidden;
+}
+
+span.purchased {
+  visibility: visible;
+}
+
 @media (max-width: 500px){
   .boxDetails{
     padding: 0;
