change font color. test css file

--- a/src/css/Car.module.css
+++ b/src/css/Car.module.css
@@ -79,7 +79,8 @@
   }
 
   .car .boxDetails .isdiscount {
-    color: crimson;
+    /* color: crimson; */
+    color: #FE7F50;
     font-size: 1rem;
   }
   .car .boxDetails .undiscount{
