--- a/src/css/Navbar.module.css
+++ b/src/css/Navbar.module.css
@@ -2,7 +2,7 @@
   text-decoration:none;
   color:#000;
   margin-right:1rem;
-  margin-top:0.5rem
+  margin-top:1rem;
 }
 .span:hover{
   color:#FE7F50;
