--- a/src/custom.scss
+++ b/src/custom.scss
@@ -1,6 +1,6 @@
 $theme-colors: (
     "info":  #fff,
-    "danger":  #B34C26,
+    "danger":  #FE7F50,
     "success":#14B394,
     "warning":#50FFDD,
     "primary":#FF7F50,
@@ -14,7 +14,7 @@ $third:#F5F7F6;
 
 .cartBox{
     color:$first;
-    font-size:0.8rem;
+    font-size:1rem;
     font-weight: 600;
     padding:0;
     margin:0;
@@ -26,7 +26,8 @@ $third:#F5F7F6;
     margin:0;
 }
 .cartBox p {
-margin-bottom:-10px;
+    margin-bottom: -1.7rem;
+    margin-left: 2.5rem;
 }
 .dropdown-menu  {
     right: 0;
@@ -55,12 +56,7 @@ margin-bottom:-10px;
         order:1;
         }
 }
-.nav-link p {
-    margin: auto;
-}
-.dropdown-item.active, .dropdown-item:active{
-    background-color:$first;
-}
+
 .fadeout {
     text-align:center;
     color: #000;
