--- a/src/custom.scss
+++ b/src/custom.scss
@@ -8,7 +8,7 @@ $theme-colors: (
 $first:#FE7F50;
 $second:#344648;
 $third:#F5F7F6;
-
+$fourth:#ffc8b4;
 @import "~bootstrap/scss/bootstrap";
 @use "sass:color";
 
@@ -82,7 +82,7 @@ $third:#F5F7F6;
       }
   }
   .jumbotron {
-    background-color:$first; 
+    background-color:$fourth; 
 
 }
 .About{
