--- a/src/css/Car.module.css
+++ b/src/css/Car.module.css
@@ -25,11 +25,10 @@
 }
 
 .cartBox img {
-  width:20px;
-  height:20px;   
-  padding:0;
-  margin:0;
-  fill: black;
+  width:30px;
+  height:25px;   
+
+  
 }
 /* .car img:hover{
   width: 100%;
@@ -47,6 +46,7 @@
   margin: 30px 0 15px 0;
 }
 .boxDetails h2{
+  font-weight:bold;
   font-family: 'Lato';
   color:#030303;
   font-size: 19px;
@@ -73,6 +73,7 @@
   } */
 
   .car .boxDetails h4{
+    font-weight:bold;
     display: flex;
     justify-content: space-between;
     color:#030303;
@@ -89,14 +90,17 @@
   }
 
 .car .boxDetails button{
+  border: none;
+  padding-left: 60px;
   cursor: pointer;
-  padding-right: 50px;
+  background-color: white;
+  
 }
 
-.car .boxDetails button:hover{
+/* .car .boxDetails button:hover{
   background: #afafaf;
   color: #333;
-}
+} */
 
 .imageBox {
   position: relative;
