--- a/src/css/Car.module.css
+++ b/src/css/Car.module.css
@@ -18,8 +18,8 @@
 }
 
 .car img{
-  width: 100%;
-  max-height: 300px;
+  width: 431px;
+  height: 298px;
   display: block;
   object-fit: cover;
 }
