--- a/src/custom.scss
+++ b/src/custom.scss
@@ -1,18 +1,21 @@
 $theme-colors: (
-    "info":  #ff7f50,
-    "danger":  #B34C26,
+    "info":  #fff,
+    "danger":  #FE7F50,
     "success":#14B394,
     "warning":#50FFDD,
     "primary":#FF7F50,
-    "secondary":#FF9269,
 );
-
+$first:#FE7F50;
+$second:#344648;
+$third:#F5F7F6;
+$fourth:#ffc8b4;
 @import "~bootstrap/scss/bootstrap";
 @use "sass:color";
 
 .cartBox{
-    color:#fff;
-    font-size:0.8rem;
+    color:$first;
+    font-size:1rem;
+    font-weight: 600;
     padding:0;
     margin:0;
 }
@@ -23,7 +26,8 @@ $theme-colors: (
     margin:0;
 }
 .cartBox p {
-margin-bottom:-10px;
+    margin-bottom: -1.7rem;
+    margin-left: 2.5rem;
 }
 .dropdown-menu  {
     right: 0;
@@ -33,6 +37,12 @@ margin-bottom:-10px;
 .dropdown-toggle::after {
     display: none;
 }
+
+.navbar {
+    border-radius: 2px;
+    box-shadow: 0px 1px 10px #999;
+  }
+  
 .nav-link a {
     color:#fff;
 }
@@ -46,17 +56,9 @@ margin-bottom:-10px;
         order:1;
         }
 }
-.nav-link p {
-    margin: auto;
+.dropdown-item.active, .dropdown-item:active{
+    background-color:$first;
 }
-.About  {
-    color:#000;
-    background-color: #fff;
-}
-.About h1{
-    font-weight: 600;
-    }
-
 .fadeout {
     text-align:center;
     color: #000;
@@ -81,3 +83,20 @@ margin-bottom:-10px;
         opacity: 0; 
       }
   }
+  .jumbotron {
+    background-color:$fourth; 
+
+}
+.About{
+    text-align: center;
+    h1{
+        font-weight: 600;
+        }
+        h2{
+            font-size:1.5rem;
+            font-weight: 600;
+            }
+        img{
+            padding:2rem;
+        }    
+}
