--- a/src/css/Car.module.css
+++ b/src/css/Car.module.css
@@ -2,12 +2,15 @@
  .car {
   display: flex;
   flex-direction: column;
-  max-width: 431px;
+  /* max-width: 431px; */
+  max-width: 310px;
   width: 100%;
-  height: 550px;
+  /* height: 550px; */
+  height: 500px;
   overflow: hidden;
   box-shadow: 0 0 5px #ccc;
-  margin: 60px;
+  /* margin: 60px; */
+  margin: 20px;
   cursor: pointer;
   background: white;
   position: relative;
@@ -138,8 +141,8 @@ span.purchased {
 
 span.discountTag {
   position: absolute;
-  top: 30px;
-  left: 30px;
+  top: 20px;
+  left: 20px;
   height: 50px;
   width: 50px;
   background-color: #FE7F50;
