--- a/src/css/filter.module.css
+++ b/src/css/filter.module.css
@@ -18,14 +18,38 @@
 .dropdownContent {
   display: none;
   position: absolute;
+  margin-left: -120px;
   background-color: white;
-  min-width: 200px;
+  width: 350px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
 
-.priceFilter {
-  padding: 30px;
+.priceFilter  {
+  /* padding-left: 60px; */
+  /* padding-left: auto;
+  padding-right: auto; */
+
+  padding-top: 20px;
+  /* padding-right: 0; */
+  /* margin-left: auto;
+  margin-right: auto; */
+}
+
+.minmax {
+  padding-left: 60px;
+}
+
+.p {
+  padding-left: 30px;
+}
+
+/* .slider::-webkit-slider-thumb {
+  padding-left: 30px;
+} */
+
+.range-slider {
+  margin-right: 10px;  
 }
 
 /* Change color of dropdown links on hover */
