--- a/src/css/Car.module.css
+++ b/src/css/Car.module.css
@@ -1,9 +1,8 @@
-
- .car {
+.car {
   display: flex;
   flex-direction: column;
   /* max-width: 431px; */
-  max-width: 310px;
+  max-width: 340px;
   width: 100%;
   /* height: 550px; */
   height: 500px;
@@ -161,7 +160,20 @@ span.undiscount {
   visibility: hidden;
 }
 
+@media (max-width: 768px){
+  .car {
+    max-width: 300px;
+    margin: 15px;
+    height: 460px;
+  }
+}
+
 @media (max-width: 500px){
+  .car {
+    max-width: 290px;
+    margin: 15px 0;
+  }
+
   .boxDetails{
     padding: 0;
   }
