--- a/src/css/CartPage.module.css
+++ b/src/css/CartPage.module.css
@@ -26,3 +26,12 @@
   padding: 5px;
   border: none;
 }
+
+@media (max-width: 768px){
+  .buyButton {
+    position: relative;
+    top: 15px;
+    left: 15px;
+    margin-bottom: 50px;
+  }
+}
