--- a/src/css/Car.module.css
+++ b/src/css/Car.module.css
@@ -20,8 +20,8 @@
 }
 
 .car img{
-  width: 431px;
-  height: 298px;
+  width: 100%;
+  max-height: 300px;
   display: block;
   object-fit: cover;
 }
