--- a/src/css/Confirmation.module.css
+++ b/src/css/Confirmation.module.css
@@ -1,12 +1,43 @@
 
-.confirmation {
-  font-family: 'Roboto';
+.thanks {
+  margin: 0 auto;
+}
+.thanks > h1 {
+  font-family: 'Lato';
+  font-weight: 700;
+  font-size: 1.6rem;
   text-align: center;
   margin-top: 30px;
 }
 
-.thanks {
-  font-weight: 700;
-  font-family: 'Lato';
-  font-size: 1.6rem;
+.thanks > p {
+  text-align: center;
+  font-size: .9rem;
+}
+
+.details {
+  color: gray;
+  font-weight: 300;
+  
+  font-family: 'Roboto Condensed';
+  display: flex;
+  flex-direction: column;
+}
+
+.left {
+  text-align: left;
+}
+
+.right {
+  text-align: right;
+}
+
+.details > h4 {
+  font-size: 1.2rem;
+}
+
+.details > p {
+  font-size: .8rem;
+  line-height: .3rem;
+  text-align: justify;
 }
