--- a/src/css/Confirmation.module.css
+++ b/src/css/Confirmation.module.css
@@ -1,4 +1,3 @@
-
 .thanks {
   margin: 0 auto;
 }
@@ -15,29 +14,53 @@
   font-size: .9rem;
 }
 
+.confirmation h4 {
+  text-align: center;
+}
+
 .details {
   color: gray;
   font-weight: 300;
-  
   font-family: 'Roboto Condensed';
-  display: flex;
-  flex-direction: column;
-}
-
-.left {
-  text-align: left;
-}
-
-.right {
-  text-align: right;
+  text-align: center;
+  margin-top: 40px;
 }
 
 .details > h4 {
   font-size: 1.2rem;
 }
 
-.details > p {
+.orderDetails, .carDetails {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  padding: 20px 40px;
   font-size: .8rem;
-  line-height: .3rem;
-  text-align: justify;
+  line-height: .2rem;
+}
+
+.detailsLeft {
+  text-align: left;
+}
+
+.detailsRight {
+  text-align: right;
+}
+
+.print {
+  border: none;
+  background: #FE7F50;
+  color: white;
+  font-size: .8rem;
+  padding: 10px 35px;
+  display: block;
+  margin: 20px auto;
+}
+
+@media (min-width: 768px){
+  .confirmation {
+    width: 500px;
+    display: block;
+    margin: 0 auto;
+  }
 }
