--- a/src/css/Sort.module.css
+++ b/src/css/Sort.module.css
@@ -4,8 +4,26 @@
   padding-left: 6px;
   padding-right: 2rem;
   color:#707070;
+  border: 0px;
+  border-right: gray 0.5px solid;
 }
 
 .sortSelect {
   color: black;
 }
+
+/* .sort-container select option:hover {
+  background: #ff9500 -webkit-linear-gradient(bottom, #ff9500 0%, #ff9500 100%); 
+  color: #fff;
+   background: orangered; 
+} */
+
+/* .Sort .sortSelect:hover {
+  background: orangered;
+  color: #FE7F50;
+} */
+
+/* select option:hover {
+  background-color: orangered;
+  color: #FE7F50;
+} */
