--- a/src/css/filter.module.css
+++ b/src/css/filter.module.css
@@ -2,7 +2,9 @@
   background-color: white;
   color:#707070;
   font-size: 16px;
-  border: gray 0.5px solid;
+  border: 0px;
+  border-right: gray 0.5px solid;
+  /* border: gray 0.5px solid; */
   padding-top:10px;
   padding-bottom: 10px;
   padding-left: 6px;
@@ -49,10 +51,28 @@
 } */
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd;}
+.dropdown-content:hover {
+  background-color: #ddd;
+  display: block;
+
+}
 
 /* Show the dropdown menu on hover */
-.dropdown:hover .dropdownContent {display: block;}
+.dropdown:hover .dropdownContent {
+  display: block;
+  
+}
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {background-color: white;}
+/* .dropdown:hover .dropbtn {background-color: white;} */
+
+/* .bootstrap-select .bs-ok-default::after {
+  width: 0.3em;
+  height: 0.6em;
+  border-width: 0 0.1em 0.1em 0;
+  transform: rotate(45deg) translateY(0.5rem);
+}
+
+.btn.dropdown-toggle:focus {
+  outline: none !important;
+} */
