--- a/src/css/Confirmation.module.css
+++ b/src/css/Confirmation.module.css
@@ -1,6 +1,13 @@
+.confirmation {
+  width: 330px;
+  display: block;
+  margin: 0 auto;
+}
+
 .thanks {
   margin: 0 auto;
 }
+
 .thanks > h1 {
   font-family: 'Lato';
   font-weight: 700;
@@ -33,8 +40,8 @@
 .orderDetails, .carDetails {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-  padding: 20px 40px;
+  justify-content: space-between;
+  padding: 20px 0px;
   font-size: .8rem;
   line-height: .2rem;
 }
@@ -45,6 +52,11 @@
 
 .detailsRight {
   text-align: right;
+}
+
+.carDetailsC:not(:last-child) {
+  border-bottom: 1px solid  #FE7F50 ;
+  /* border-bottom-width: 50px; */
 }
 
 .carDetails {
@@ -61,10 +73,10 @@
   margin: 20px auto;
 }
 
-@media (min-width: 768px){
+/* @media (min-width: 768px){
   .confirmation {
-    width: 500px;
+    width: 330px;
     display: block;
     margin: 0 auto;
   }
-}
+} */
