--- a/src/css/Car.module.css
+++ b/src/css/Car.module.css
@@ -1,12 +1,15 @@
 .car {
   display: flex;
   flex-direction: column;
+  /* max-width: 431px; */
   max-width: 340px;
   width: 100%;
+  /* height: 550px; */
   height: 500px;
   overflow: hidden;
   box-shadow: 0 0 5px #ccc;
-  margin: 40px;
+  /* margin: 60px; */
+  margin: 20px;
   cursor: pointer;
   background: white;
   position: relative;
