--- a/src/css/productpage.module.css
+++ b/src/css/productpage.module.css
@@ -3,100 +3,32 @@
 }
 
 .image-container img {
-    
-    margin-top: 100px;
-    width: 100%;
-    max-width: 510px;  
-    max-height: 400px;
-    
-}
-
-.product-details {
-    margin-top: 100px;
-}
-
-.product-details .product-info h1{
-    font-size: 44px;
-}
-
-.image-container {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-span.purchasedBox {
-background-color: #FE7F50;
-color: white;
-font-weight: 600;
-text-align: center;
-padding: 20px 40px;
-position: absolute;
-transform:translate(-25%);
-}
-
-span.notPurchased {
-visibility: hidden;
-}
-
-span.purchased {
-visibility: visible;
+    width: 100%;    
 }
 
 .product-details .product-heading {
     font-size: 44px;
-    color: #000000;
+    color: #707070;
 }
-
-.product-details .product-makemiles {
-    margin-right: 340px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}   
-
-.product-details .product-makemiles h4{
-    font-size: 29px;
-}
-
-.product-details .product-city-year {
-    margin-right: 444px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}   
-
-.product-details .product-city-year h6{
-    font-size: 18px;
-}   
-
 
 .product-details .product-info {
-    font-size: 37px;
-    color: #000000;
+    font-size: 24px;
+    color: #707070;
 }
 
 .product-details p {
-    font-size: 20px;
+    font-size: 14px;
     color: #707070;
-    max-width: 920px;
+    max-width: 400px;
 }
 
 .product-details .product-price {
-    font-size: 40px;
-    margin-right: 30px;
+    margin-right: 100px;
 }
 
 .product-details button {
     padding: 10px 20px;
-    background-color: #ffffff;
+    background-color: #707070;
     color: white;
     border: none;
 }
-.product-details img{
-    margin-top: -30px;
-    width:44px;
-    height:40px;    
-}
-
