--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Roboto:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap');
 
 body {
   margin: 0;
-  font-family: 'Lato','Roboto','Roboto Condensed', sans-serif;
+  font-family: 'Lato','Roboto', sans-serif;
 }
 h1, h2, h3, h4, h5, h6, p{
-  font-family:'Roboto Condensed'
+  font-family:'Roboto'
 }
 
 code {
