--- a/src/css/CartPage.module.css
+++ b/src/css/CartPage.module.css
@@ -1,4 +1,5 @@
 .cartPage-style {
+  background: #F5F7F6;
   display: grid;
 }
 
@@ -7,16 +8,31 @@
   font-size: 2rem;
 }
 
+.product-container {
+  margin:5px; 
+  padding:5px; 
+  width: auto; 
+  height: 37vw; 
+  overflow: scroll; 
+  text-align:justify; 
+}
+
+.forms {
+  margin-top: 25px;
+  padding: 10px;
+  background-color: white;
+}
+
 .shipping-field {
   position: fixed;
 }
 
 .buyButton {
+  display: grid;
   background-color: #FE7F50 ;
-  position: absolute;
-  bottom: 5px;
-  right: 15px;
-  width: 100px;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
   padding: 5px;
   border: none;
 }
@@ -29,3 +45,4 @@
     margin-bottom: 50px;
   }
 }
+
