--- a/src/css/productpage.module.css
+++ b/src/css/productpage.module.css
@@ -3,32 +3,100 @@
 }
 
 .image-container img {
-    width: 100%;    
+    
+    margin-top: 100px;
+    width: 100%;
+    max-width: 510px;  
+    max-height: 400px;
+    
+}
+
+.product-details {
+    margin-top: 100px;
+}
+
+.product-details .product-info h1{
+    font-size: 44px;
+}
+
+.image-container {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+span.purchasedBox {
+background-color: #FE7F50;
+color: white;
+font-weight: 600;
+text-align: center;
+padding: 20px 40px;
+position: absolute;
+transform:translate(-25%);
+}
+
+span.notPurchased {
+visibility: hidden;
+}
+
+span.purchased {
+visibility: visible;
 }
 
 .product-details .product-heading {
     font-size: 44px;
-    color: #707070;
+    color: #000000;
 }
 
+.product-details .product-makemiles {
+    margin-right: 340px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}   
+
+.product-details .product-makemiles h4{
+    font-size: 29px;
+}
+
+.product-details .product-city-year {
+    margin-right: 444px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}   
+
+.product-details .product-city-year h6{
+    font-size: 18px;
+}   
+
+
 .product-details .product-info {
-    font-size: 24px;
-    color: #707070;
+    font-size: 37px;
+    color: #000000;
 }
 
 .product-details p {
-    font-size: 14px;
+    font-size: 20px;
     color: #707070;
-    max-width: 400px;
+    max-width: 920px;
 }
 
 .product-details .product-price {
-    margin-right: 100px;
+    font-size: 40px;
+    margin-right: 30px;
 }
 
 .product-details button {
     padding: 10px 20px;
-    background-color: #707070;
+    background-color: #ffffff;
     color: white;
     border: none;
 }
+.product-details img{
+    margin-top: -30px;
+    width:44px;
+    height:40px;    
+}
+
