--- a/src/custom.scss
+++ b/src/custom.scss
@@ -56,8 +56,13 @@ $fourth:#ffc8b4;
 {
    .dropdown  {
         order:1;
+        margin-right: 3rem;
+        }
+        .navbar-brand{
+            margin-left:3rem;
         }
 }
+
 .dropdown-item.active, .dropdown-item:active{
     background-color:$first;
 }
@@ -106,4 +111,9 @@ $fourth:#ffc8b4;
 .rangeSlider::-webkit-slider-thumb {
     color: #ff7f50;
     background: #ff7f50;
+}
+
+.carlist-container h1{
+    padding-top: 3rem;
+    padding-bottom: 2rem;
 }
