--- a/src/css/Car.module.css
+++ b/src/css/Car.module.css
@@ -17,11 +17,12 @@
 }
 
 .car img{
-  width: 100%;
-  max-height: 300px;
+  width: 430px;
+  height: 220px;
   display: block;
   object-fit: cover;
 }
+
 
 .cartBox img {
   width:30px;
@@ -163,12 +164,36 @@ span.undiscount {
     margin: 15px;
     height: 460px;
   }
+  .car img{
+    width: 100%;
+    height: 100%;
+    display: block;
+    object-fit: cover;
+  }
+
+  .boxDetails{
+    padding: 0;
+  }
+  .boxDetails img{
+    width: 40px;
+    height: 35px;
+  }
+  .details .img-container{
+    height: 350px;
+  }
 }
 
 @media (max-width: 500px){
   .car {
     max-width: 290px;
     margin: 15px 0;
+  }
+
+  .car img{
+    width: 100%;
+    height: 100%;
+    display: block;
+    object-fit: cover;
   }
 
   .boxDetails{
