--- a/src/css/Confirmation.module.css
+++ b/src/css/Confirmation.module.css
@@ -56,27 +56,33 @@
 
 .carDetailsC:not(:last-child) {
   border-bottom: 1px solid  #FE7F50 ;
-  /* border-bottom-width: 50px; */
 }
 
 .carDetails {
   padding-bottom: .9rem;
 }
 
-.print {
-  border: none;
-  background: #FE7F50;
-  color: white;
-  font-size: .8rem;
-  padding: 10px 35px;
-  display: block;
-  margin: 20px auto;
+.printButton {
+  position: relative;
 }
 
-/* @media (min-width: 768px){
-  .confirmation {
-    width: 330px;
-    display: block;
-    margin: 0 auto;
-  }
-} */
+.print {
+  border: none;
+  color: white;
+  font-size: 1rem;
+  position: absolute;
+  width: 160px;
+  height: 50px;
+  top: 8px;
+  right: 85px;
+  background: #FE7F50;
+  padding-left: 50px;
+}
+
+.printIcon {
+  width: 22px;
+  position: absolute;
+  top: 22px;
+  left: 120px;
+}
+
