--- a/src/css/productpage.module.css
+++ b/src/css/productpage.module.css
@@ -36,6 +36,28 @@ span.purchased {
 visibility: visible;
 }
 
+span.discountTag {
+    position: absolute;
+    top: 50px;
+    left: 35px;
+    height: 50px;
+    width: 50px;
+    background-color: #FE7F50;
+    border-radius: 50%;
+    color: white;
+    text-align: center;
+    padding: 12px 5px;
+    font-weight: 600;
+}
+
+span.isdiscount {
+    visibility: visible;
+}
+
+span.undiscount{
+    visibility: hidden;
+}
+
 .product-details .product-heading {
     font-size: 44px;
     color: #000000;
