--- a/src/custom.scss
+++ b/src/custom.scss
@@ -117,3 +117,8 @@ $fourth:#ffc8b4;
     padding-top: 3rem;
     padding-bottom: 2rem;
 }
+
+.arrow{
+    margin-left: 1rem;
+    margin-top: 2rem;
+}
