--- a/src/css/CartProduct.module.css
+++ b/src/css/CartProduct.module.css
@@ -10,7 +10,9 @@
   margin-top: 10vh;
 }
 
-
+.product-image {
+  position: relative;
+}
 
 .product-image img {
  width: 200px;
@@ -83,5 +85,25 @@ display: inline-block;
   cursor: pointer;
 }
 
+span.discountTag {
+  position: absolute;
+  top:20px;
+  left: 20px;
+  height: 50px;
+  width: 50px;
+  background-color: #FE7F50;
+  border-radius: 50%;
+  color: white;
+  text-align: center;
+  padding: 12px 5px;
+  font-weight: 600;
+}
 
+span.isdiscount {
+  visibility: visible;
+}
+
+span.undiscount{
+  visibility: hidden;
+}
 
