--- a/src/css/productpage.module.css
+++ b/src/css/productpage.module.css
@@ -1,180 +1,189 @@
 .product-page {
     margin: 50px auto 0 auto;
-}
-
-.image-container img {   
+  }
+  
+  .image-container img {
     width: 100%;
-    max-width: 510px;  
-    max-height: 400px;    
-}
-
-/* .product-details {
-    margin-top: 100px;
-} */
-
-.product-details .product-info h1{
-    
+    max-width: 510px;
+    max-height: 400px;
+  }
+   
+  .product-details .product-info h1 {
+    display: inline-block;
     font-size: 44px;
-}
-
-.image-container {
+  }
+  
+  .image-container {
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-span.purchasedBox {
-    background-color: #FE7F50;
+  }
+  
+  span.purchasedBox {
+    background-color: #fe7f50;
     color: white;
     font-weight: 600;
     text-align: center;
     padding: 20px 40px;
     position: absolute;
-}
-
-span.notPurchased {
-visibility: hidden;
-}
-
-span.purchased {
-visibility: visible;
-}
-
-span.discountTag {
+  }
+  
+  span.notPurchased {
+    visibility: hidden;
+  }
+  
+  span.purchased {
+    visibility: visible;
+  }
+  
+  span.discountTag {
     position: absolute;
     top: 50px;
     left: 35px;
     height: 50px;
     width: 50px;
-    background-color: #FE7F50;
+    background-color: #fe7f50;
     border-radius: 50%;
     color: white;
     text-align: center;
     padding: 12px 5px;
     font-weight: 600;
-}
-
-span.isdiscount {
+  }
+  
+  span.isdiscount {
     visibility: visible;
-}
-
-span.undiscount{
+  }
+  
+  span.undiscount {
     visibility: hidden;
-}
-
-.product-details .product-heading {
+  }
+  
+  .product-details .product-heading {
     font-size: 44px;
     color: #000000;
-}
-
-.product-details .product-makemiles {
-    margin-right: 340px;
+  }
+  
+  .product-details .details1 {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}   
+  }
 
-.product-details .product-makemiles h4{
+  .pointer { 
+      cursor: pointer; 
+  }
+  
+  .product-details .product-makemiles {
+    margin-right: 240px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  
+  .product-details .product-makemiles h4 {
     font-size: 29px;
-}
-
-.product-details .product-city-year {
-    margin-right: 444px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}   
-
-.product-details .product-city-year h6{
+  }
+  
+  .product-details .product-city-year h6 {
     font-size: 18px;
-}   
-
-
-.product-details .product-info {
-    margin-right: 610px;
+  }
+  
+  .product-details .product-info {
+    display: inline-block;
+      margin-bottom: 0px;
     font-size: 37px;
     color: #000000;
-}
-
-.product-details p {
+  }
+  
+  .product-details p {
     font-size: 20px;
     color: #707070;
     max-width: 920px;
-}
-
-.product-details .product-price {
+  }
+  
+  .product-details .product-price {
     font-size: 40px;
     margin-right: 30px;
-}
-
-.product-details button {
+  }
+  
+  .product-details button {
     padding: 10px 20px;
     background-color: #ffffff;
     color: white;
     border: none;
-}
-.product-details img{
+  }
+  
+  .product-details img {
     margin-top: -30px;
-    width:44px;
-    height:40px;    
-}
+    width: 44px;
+    height: 40px;
+  }
+  
+  @media (max-width: 500px) {
 
-@media (max-width: 500px){
-
-    .product-details {
-        margin-top: 0;
-    }
-    .product-details .product-makemiles {
+   
+    .product-page {
+        margin: 15px auto 0 auto;
+      }
+      
+    .product-details .details1 {
+        display: flex;
+        justify-content: space-between;
+      }
+      .product-details .product-makemiles {
         font-size: 25px;
         margin-right: 0;
         display: flex;
         justify-content: space;
-    }  
+      }
     
-    .product-details .product-makemiles h4{
+      .product-details .product-makemiles h4 {
         font-size: 25px;
-       
-    }  
+      }
     
-    .product-details .product-city-year {
+      .product-details .product-city-year {
         margin-right: 0;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-    }   
-    .product-details .product-city-year h6{
-        font-size: 20px;
-    }   
+      }
     
-}
+      .product-details .product-city-year h6 {
+        font-size: 20px;
+      }
+  }
 
 @media (max-width: 768px){
+    .product-page {
+        margin: 15px auto 0 auto;
+      }
+      
+    .image-container img {
+        width: 100%;
+      }
 
-    .product-details {
-        margin-top: 100px;
-    }
     .product-details .product-makemiles {
-        font-size: 25px;
-        margin-right: 0;
-        display: flex;
-        justify-content: space;
-    }  
     
-    .product-details .product-makemiles h4{
-        font-size: 25px;
-       
-    }  
-    
-    .product-details .product-city-year {
-        margin-right: 0;
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         justify-content: space-between;
-    }   
-    .product-details .product-city-year h6{
+      }
+    
+      .product-details .product-makemiles h4 {
+        font-size: 25px;
+      }
+    
+      .product-details .product-city-year {
+        
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+      }
+    
+      .product-details .product-city-year h6 {
         font-size: 20px;
-    }   
+      }
+      
+      
     
 }
 
