--- a/src/css/SearchFields.module.css
+++ b/src/css/SearchFields.module.css
@@ -5,3 +5,12 @@ input[type="text"] {
   padding-left: 6px;
   border: 0px;
 }
+
+
+@media only screen and (max-width: 659px) 
+{
+  .search{
+   order:-1;
+  }
+  
+}
