Mikaela och Pucha responsive design
Fixed columns on the Shipping and billingsfields to align. Fixed the buybutton to be aligned and centered. Fixed the searchfields to be correctly sized to wireframe, fixed fontsize on price and padding on the carPage h1.

--- a/src/css/CartPage.module.css
+++ b/src/css/CartPage.module.css
@@ -28,22 +28,8 @@
 }
 
 .buyButton {
-  display: grid;
   background-color: #FE7F50 ;
-  width: 90%;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 5px;
+  width: 100%;
   border: none;
+  color:#fff;
 }
-
-
-@media (max-width: 768px){
-  .buyButton {
-    position: relative;
-    top: 15px;
-    left: 15px;
-    margin-bottom: 50px;
-  }
-}
-
