Added pagination component

--- a/src/index.css
+++ b/src/index.css
@@ -56,3 +56,37 @@ input[type="range"].range-slider::-moz-range-thumb {
   color: black;
 }
 /* Carousel Buttons Ends */
+
+.pagination {
+	display: flex;
+  justify-content: center;
+	margin-top: 15px;
+}
+.pagination li a {
+	border: none;
+	font-size: 13px;
+	min-width: 30px;
+	min-height: 30px;
+	color: #999;
+	margin: 0 2px;
+	line-height: 30px;
+	border-radius: 5px;
+	text-align: center;
+	padding: 0 1px;
+}
+.pagination li a:hover {
+	color: #666;
+}	
+.pagination li.active a, .pagination li.active a.page-link {
+	background:  #fe7f50;
+}
+.pagination li.active a:hover {        
+	background:  #fe7f50;
+}
+.pagination li.disabled i {
+	color: #ccc;
+}
+.pagination li i {
+	font-size: 16px;
+	padding-top: 6px
+}
