--- a/src/css/productpage.module.css
+++ b/src/css/productpage.module.css
@@ -70,7 +70,7 @@
   
   .product-details .details1 {
     display: flex;
-    padding-top:1.5rem;
+    padding-top:0.5rem;
   }
 
   .pointer { 
@@ -82,6 +82,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    font-size: 1.5rem;
+    font-weight: 100;
   }
 
   .product-details .product-city-year {
