--- a/src/custom.scss
+++ b/src/custom.scss
@@ -130,3 +130,19 @@ $fourth:#ffc8b4;
   padding-left:1rem;
 }
 
+.carousel-inner {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.carousel .carousel-item {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+// .carousel-control-next-icon, .carousel-control-prev {
+//     display: none;
+// }
+
