added css for productpage on custom scss
added css for productpage on custom scss

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -130,11 +130,11 @@ $fourth:#ffc8b4;
   padding-left:1rem;
 }
 
-.carousel-inner {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
+// .carousel-inner {
+//     display: flex;
+//     flex-direction: row;
+//     justify-content: center;
+// }
 
 .carousel .carousel-item {
     display: flex;
