--- a/src/css/productpage.module.css
+++ b/src/css/productpage.module.css
@@ -136,10 +136,10 @@
     margin-top: 2rem;
   }
 
-  .carousel {
+  /* .carousel {
     display: flex;
     flex-direction: column;
-  }
+  } */
 
 @media (max-width: 800px) {
 
