Fixing css on product page
Fixing css on product page

--- a/src/css/CartPage.module.css
+++ b/src/css/CartPage.module.css
@@ -31,6 +31,7 @@
 .forms {
   width: 25vw;
   margin-top: 25px;
+  margin-bottom: 6rem;
   padding: 10px;
   background-color: white;
 }
@@ -48,6 +49,7 @@
   width: 100%;
   border: none;
   color:#fff;
+  /* margin-bottom: 5rem; */
 }
 
 .EmptyCartBox img {
