--- a/src/css/Car.module.css
+++ b/src/css/Car.module.css
@@ -35,6 +35,7 @@
   padding: 20px;
   margin: 15px 0 15px 0;
 }
+
 .boxDetails h2{
   display: flex;
   justify-content: flex-start;
@@ -51,6 +52,7 @@
   overflow: hidden;
   height: 50px;
 }
+
 .boxDetails h3{
   display: flex;
   justify-content: flex-start;
@@ -118,6 +120,29 @@ span.notPurchased {
 
 span.purchased {
   visibility: visible;
+}
+
+.soldBox{
+  width:100%;
+  height:100%
+}
+span.soldBox {
+  background-color: rgba(0, 0, 0, 0.548);
+  color: white;
+  font-size: 1.5rem;
+  font-weight: 600;
+  text-align: center;
+  padding: 30%;
+  position: absolute;
+}
+span.notSold {
+  visibility: hidden;
+}
+span.sold {
+  visibility: visible;
+}
+button.isSold{
+  display:none
 }
 
 span.discountTag {
