--- a/src/custom.scss
+++ b/src/custom.scss
@@ -142,10 +142,10 @@ $fourth:#ffc8b4;
     justify-content: center;
 }
 
-.row {
-    padding-left: 6rem;
-    padding-right: 6rem;
-  }
+// .row {
+//     padding-left: 6rem;
+//     padding-right: 6rem;
+//   }
 
 // .carousel-control-next-icon, .carousel-control-prev {
 //     display: none;
